# TinyOpenCL

./: CMakeLists.txt
src/: TinyOpenCL.cpp  tiny.cl
